--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -110,7 +110,7 @@
                             <input id="btn-search" type="button" class="form-control" value="开始搜索"  >
                         </div>
                         <div class="col-sm-2 pull-right">
-                            <input type="button" class="form-control" value="重置" onclick="reset_search()">
+                            <input type="button" class="form-control" value="重置" id="reset-search">
                         </div>
                         <div class="col-sm-2 pull-right">
                             <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="热更新" id="update" >
