成果演示版

--- a/G48/front/templates/base/front_base.html
+++ b/G48/front/templates/base/front_base.html
@@ -37,42 +37,32 @@
     </div>
 </header>
 {% block main %}{% endblock %}
-<footer class="footer">
-    <div class="top-group">
-        <div class="top-inner-group">
-            <div class="logo-box"></div>
-            <div class="detail-group">
-                <div class="line1">
-                    <ul class="links">
-                        <li><a href="#">关于大航海之路</a></li>
-                        <!--<li><a href="#">创业课堂</a></li>-->
-                        <!--<li><a href="#">寻求报道</a></li>-->
-                        <!--<li><a href="#">创业礼包</a></li>-->
-                    </ul>
-                    <div class="about-us">
-                        <span class="title">关于我们：</span>
-                        <!--<ul class="social-group">
-                            <li class="weixin">
-                                <div class="wx-qrcode"></div>
-                                <span class="text">xfz008
-                                </span>
-                            </li>
-                            <li class="weibo">
-                                <a class="text" href="#">小饭桌创业课堂</a>
-                            </li>
-                        </ul>-->
-                    </div>
-                </div>
-                <div class="line2">
-                    <p class="address">地址：杭州市滨江区西可科技园</p>
-                    <p class="contact">联系方式：*********（工作日10点-18点）</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="bottom-group">
-        ©2018 网易（杭州）网络有限公司
-    </div>
-</footer>
+{#<footer class="footer">#}
+{#    <div class="top-group">#}
+{#        <div class="top-inner-group">#}
+{#            <div class="logo-box"></div>#}
+{#            <div class="detail-group">#}
+{#                <div class="line1">#}
+{#                    <ul class="links">#}
+{#                        <li><a href="#">关于大航海之路</a></li>#}
+{#                        <!--<li><a href="#">创业课堂</a></li>-->#}
+{#                        <!--<li><a href="#">寻求报道</a></li>-->#}
+{#                        <!--<li><a href="#">创业礼包</a></li>-->#}
+{#                    </ul>#}
+{#                    <div class="about-us">#}
+{#                        <span class="title">关于我们：</span>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="line2">#}
+{#                    <p class="address">地址：杭州市滨江区西可科技园</p>#}
+{#                    <p class="contact">联系方式：*********（工作日10点-18点）</p>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#    <div class="bottom-group">#}
+{#        ©2018 网易（杭州）网络有限公司#}
+{#    </div>#}
+{#</footer>#}
 </body>
 </html>
