--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -119,7 +119,6 @@
                     </div>
                 </form>
             </div>
-
             <div id="progress-group" class="form-group" style="display: none;">
                 <div class="progress">
                     <div id="progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
@@ -127,6 +126,9 @@
                     </div>
                 </div>
             </div >
+            <div id="not-found" style="display: none">
+                未检索到相关信息...
+            </div>
         </div>
 
         <!-- Modal -->
