添加更新信息

--- a/G48/front/src/css/common/init.scss
+++ b/G48/front/src/css/common/init.scss
@@ -1,8 +1,8 @@
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote,
 body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt,
 em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6,
-header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu,
-nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike,
+header, hgroup, html, i, iframe, img, ins, kbd, label, legend,  mark, menu,
+nav, object,  output, p, pre, q, ruby, s, samp, section, small, span, strike,
 strong, sub, summary, sup, time, tt, u,
 ul, var, video {
     margin: 0;
