--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -126,8 +126,24 @@
                     </div>
                 </div>
             </div >
+            <div id="update-progress-group" class="form-group" style="display: none;">
+                <div class="progress">
+                    <div id="update-progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
+                        0%
+                    </div>
+                </div>
+            </div >
             <div id="not-found" style="display: none">
-                未检索到相关信息...
+                未检索到相关信息......
+            </div>
+            <div id="modal_info" style="display: none">
+                数据正在更新中......
+            </div>
+
+            <div id="show_error_info" style="display: none">
+                <h4 style='color: red;'> 不能正确读取的文件：</h4>
+                <ol id="show_error_files">
+                </ol>
             </div>
         </div>
 
