--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -30,7 +30,9 @@
             <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>
             <span> <strong>来源SHEET: </strong>{{ data.sheet_name }}</span>
         </div>
-        <table class="table table-striped table-bordered table-hover" style="overflow:scroll;">
+
+        <div style="overflow-x:scroll;">
+        <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr>
                 {{ each data.head item index }}
@@ -59,6 +61,7 @@
             {{ /each }}
             </tbody>
         </table>
+        </div>
         {{ /each }}
     </script>
     {% endverbatim %}
