--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -117,8 +117,10 @@
                             <input type="button" class="form-control" value="重置" id="reset-search">
                         </div>
                         <div class="col-sm-2 pull-right">
-                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="热更新" id="update" >
-
+                            <input type="button" class="form-control" value="热更新" id="update">
+                        </div>
+                        <div class="col-sm-2 pull-right">
+                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="配置" id="config" >
                         </div>
                     </div>
                 </form>
