--- a/G48/front/templates/base/front_base.html
+++ b/G48/front/templates/base/front_base.html
@@ -22,6 +22,9 @@
             <a href="/"></a>
         </div>
 
+        <div class="project-name">
+        </div>
+
         <ul class="nav">
             <li class="active"><a href="#">搜索主页</a></li>
             <li><a href="#">一键查询</a></li>
