--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -101,14 +101,14 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="select-scope" class="col-sm-2 control-label">搜索范围：</label>
-                        <div class="col-sm-10">
-                            <select class="form-control" id="select-scope" name="searchRange">
-                                <option value="1">***</option>
-                            </select>
-                        </div>
-                    </div>
+{#                    <div class="form-group">#}
+{#                        <label for="select-scope" class="col-sm-2 control-label">搜索范围：</label>#}
+{#                        <div class="col-sm-10">#}
+{#                            <select class="form-control" id="select-scope" name="searchRange">#}
+{#                                <option value="1">***</option>#}
+{#                            </select>#}
+{#                        </div>#}
+{#                    </div>#}
                     <div class="form-group ">
                         <div class="col-sm-2 pull-right">
                             <input id="btn-search" type="button" class="form-control" value="开始搜索"  >
@@ -119,12 +119,20 @@
                         <div class="col-sm-2 pull-right">
                             <input type="button" class="form-control" value="热更新" id="update">
                         </div>
-                        <div class="col-sm-2 pull-right">
-                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="配置" id="config" >
+{#                        <div class="col-sm-2 pull-right">#}
+{#                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="配置" id="config" >#}
+{#                        </div>#}
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-2" style="bottom: -10px; color: crimson;">
+                            <span  data-toggle="modal" data-target="#myModal" id="config" style="font-size: 13px; cursor:pointer;">
+                                SVN配置
+                            </span>
                         </div>
                     </div>
                 </form>
             </div>
+
             <div id="progress-group" class="form-group" style="display: none;">
                 <div class="progress">
                     <div id="progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
