--- a/G48/front/templates/base/front_base.html
+++ b/G48/front/templates/base/front_base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_743039_6eebyf20ccn.css">
-    <link rel="stylesheet" href="{% static 'css/common/auth.min.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/common/auth.min.css' %}">#}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/auth.min.js' %}"></script>
     <link rel="shortcut" href="{%  static 'images/favicon.ico' %}">
