--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -32,36 +32,36 @@
         </div>
 
         <div style="overflow-x:scroll;">
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-            <tr>
-                {{ each data.colarray colnum index }}
-                <th>
-                    {{ colnum }}
-                </th>
-                {{ /each }}
-            </tr>
-            <tr>
-                {{ each data.head item index }}
-                <th >
-                    {{item }}
-                </th>
-                {{ /each }}
-            </tr>
-            </thead>
-            <tbody>
+            <table class="table table-striped table-bordered table-hover">
+                <thead>
+                <tr>
+                    {{ each data.colarray colnum index }}
+                    <th>
+                        {{ colnum }}
+                    </th>
+                    {{ /each }}
+                </tr>
+                <tr>
+                    {{ each data.head item index }}
+                    <th >
+                        {{item }}
+                    </th>
+                    {{ /each }}
+                </tr>
+                </thead>
+                <tbody>
 
-            {{ each data.row_datas row_data index }}
-            <tr>
-                {{ each row_data item index1 }}
-                <td>
-                    {{#item }}
-                </td>
+                {{ each data.row_datas row_data index }}
+                <tr>
+                    {{ each row_data item index1 }}
+                    <td>
+                        {{#item }}
+                    </td>
+                    {{ /each }}
+                </tr>
                 {{ /each }}
-            </tr>
-            {{ /each }}
-            </tbody>
-        </table>
+                </tbody>
+            </table>
         </div>
         {{ /each }}
     </script>
@@ -101,14 +101,14 @@
                             </select>
                         </div>
                     </div>
-{#                    <div class="form-group">#}
-{#                        <label for="select-scope" class="col-sm-2 control-label">搜索范围：</label>#}
-{#                        <div class="col-sm-10">#}
-{#                            <select class="form-control" id="select-scope" name="searchRange">#}
-{#                                <option value="1">***</option>#}
-{#                            </select>#}
-{#                        </div>#}
-{#                    </div>#}
+                    {#                    <div class="form-group">#}
+                    {#                        <label for="select-scope" class="col-sm-2 control-label">搜索范围：</label>#}
+                    {#                        <div class="col-sm-10">#}
+                    {#                            <select class="form-control" id="select-scope" name="searchRange">#}
+                    {#                                <option value="1">***</option>#}
+                    {#                            </select>#}
+                    {#                        </div>#}
+                    {#                    </div>#}
                     <div class="form-group ">
                         <div class="col-sm-2 pull-right">
                             <input id="btn-search" type="button" class="form-control" value="开始搜索"  >
@@ -119,9 +119,9 @@
                         <div class="col-sm-2 pull-right">
                             <input type="button" class="form-control" value="热更新" id="update">
                         </div>
-{#                        <div class="col-sm-2 pull-right">#}
-{#                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="配置" id="config" >#}
-{#                        </div>#}
+                        {#                        <div class="col-sm-2 pull-right">#}
+                        {#                            <input type="button" class="form-control btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" value="配置" id="config" >#}
+                        {#                        </div>#}
                     </div>
                     <div class="form-group">
                         <div class="col-sm-2" style="bottom: -10px; color: crimson;">
@@ -133,6 +133,20 @@
                 </form>
             </div>
 
+            <div id="circle-progress-info" style="display: none; margin: auto;">
+                <div class="circle_process">
+                    <div class="wrapper1 right">
+                        <div class="circle rightcircle"></div>
+                    </div>
+                    <div class="wrapper1 left">
+                        <div class="circle leftcircle" id="leftcircle"></div>
+                    </div>
+                </div>
+                <div id="circle-progress-text" style="text-align: center">
+                    SVN数据正在拼命加载中......
+                </div>
+            </div>
+
             <div id="progress-group" class="form-group" style="display: none;">
                 <div class="progress">
                     <div id="progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
@@ -141,27 +155,24 @@
                 </div>
             </div >
             <div id="update-progress-group" class="form-group" style="display: none;">
+                <div id="modal_info" style="display: none">
+                    数据正在拼命加载至内存中......
+                </div>
                 <div class="progress">
                     <div id="update-progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
                         0%
                     </div>
                 </div>
-                <div id="modal_info" style="display: none">
-                数据正在更新中......
-                </div>
             </div >
             <div id="not-found" style="display: none">
                 未检索到相关信息......
             </div>
-{#            <div id="modal_info" style="display: none">#}
-{#                数据正在更新中......#}
-{#            </div>#}
 
             <div id="show_error_info" style="display: none">
                 <h4 style='color: red;'> 不能正确读取的文件：</h4>
                 <div id="TypeError" style="display: none">
                     <div id="TypeErrorinfo">
-                        不能识别文件内容的文件(如图片)：
+                        不能识别文件内容的文件(如含图片文件)：
                     </div>
                     <ol id="show_TypeError_files">
                     </ol>
@@ -175,13 +186,11 @@
                 </div>
                 <div id="IOError" style="display: none">
                     <div id="IOErrorinfo">
-                       正在被其它应用打开的文件：
+                        正在被其它应用打开的文件：
                     </div>
                     <ol id="show_IOError_files">
                     </ol>
                 </div>
-{#                <ol id="show_error_files">#}
-{#                </ol>#}
             </div>
         </div>
 
@@ -251,43 +260,102 @@
         </div>
 
         <div class="show_excel" id="show_excel">
-{#            {% for data in datas %}#}
-{#                <div class="table_info">#}
-{#                    <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>#}
-{#                    <span> <strong>来源SHEET: </strong>{{ data.sheet_name }}</span>#}
-{#                </div>#}
-{#                <table class="table table-striped table-bordered table-hover" style="overflow:scroll;">#}
-{#                    <thead>#}
-{#                    <tr>#}
-{#                        {% for item in data.head %}#}
-{#                            <th >#}
-{#                                {{item }}#}
-{#                            </th>#}
-{#                        {% endfor %}#}
-{#                    </tr>#}
-{#                    </thead>#}
-{#                    <tbody>#}
-{#                    <tr>#}
-{#                        {% for colnum in data.colarray %}#}
-{#                            <td>{{ colnum }}</td>#}
-{#                        {% endfor %}#}
-{#                    </tr>#}
-{##}
-{#                    {% for row_data in data.row_datas %}#}
-{#                        <tr>#}
-{#                            {% for item in row_data %}#}
-{#                                <td>#}
-{#                                    {% autoescape off %}#}
-{#                                        {{item }}#}
-{#                                    {% endautoescape %}#}
-{#                                </td>#}
-{#                            {% endfor %}#}
-{#                        </tr>#}
-{#                    {% endfor %}#}
-{##}
-{#                    </tbody>#}
-{#                </table>#}
-{#            {% endfor %}#}
+            {#            {% for data in datas %}#}
+            {#                <div class="table_info">#}
+            {#                    <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>#}
+            {#                    <span> <strong>来源SHEET: </strong>{{ data.sheet_name }}</span>#}
+            {#                </div>#}
+            {#                <table class="table table-striped table-bordered table-hover" style="overflow:scroll;">#}
+            {#                    <thead>#}
+            {#                    <tr>#}
+            {#                        {% for item in data.head %}#}
+            {#                            <th >#}
+            {#                                {{item }}#}
+            {#                            </th>#}
+            {#                        {% endfor %}#}
+            {#                    </tr>#}
+            {#                    </thead>#}
+            {#                    <tbody>#}
+            {#                    <tr>#}
+            {#                        {% for colnum in data.colarray %}#}
+            {#                            <td>{{ colnum }}</td>#}
+            {#                        {% endfor %}#}
+            {#                    </tr>#}
+            {##}
+            {#                    {% for row_data in data.row_datas %}#}
+            {#                        <tr>#}
+            {#                            {% for item in row_data %}#}
+            {#                                <td>#}
+            {#                                    {% autoescape off %}#}
+            {#                                        {{item }}#}
+            {#                                    {% endautoescape %}#}
+            {#                                </td>#}
+            {#                            {% endfor %}#}
+            {#                        </tr>#}
+            {#                    {% endfor %}#}
+            {##}
+            {#                    </tbody>#}
+            {#                </table>#}
+            {#            {% endfor %}#}
         </div>
     </div>
+    <style>
+        .circle_process{
+            position: relative;
+            width: 159px;
+            height : 160px;
+            margin: auto;
+        {#display: none;#}
+        }
+        .circle_process .wrapper1{
+            width: 80px;
+            height: 160px;
+            position: absolute;
+            top:0;
+            overflow: hidden;
+        }
+        .circle_process .right{
+            right:0;
+        }
+        .circle_process .left{
+            left:0;
+        }
+        .circle_process .circle{
+            width: 161px;
+            height: 160px;
+            border:20px solid transparent;
+            border-radius: 50%;
+            position: absolute;
+            top:0;
+            transform : rotate(-135deg);
+        }
+        .circle_process .rightcircle{
+            border-top:20px solid green;
+            border-right:20px solid green;
+            right:0;
+            -webkit-animation: circle_right 5s linear infinite;
+        }
+        .circle_process .leftcircle{
+            border-bottom:20px solid green;
+            border-left:20px solid green;
+            left:0;
+            -webkit-animation: circle_left 5s linear infinite;
+        }
+        @-webkit-keyframes circle_right{
+            0%{
+                -webkit-transform: rotate(-135deg);
+            }
+            50%,100%{
+                -webkit-transform: rotate(45deg);
+            }
+        }
+        @-webkit-keyframes circle_left{
+            0%,50%{
+                -webkit-transform: rotate(-135deg);
+            }
+            100%{
+                -webkit-transform: rotate(45deg);
+            }
+        }
+    </style>
 {% endblock %}
