--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -1,5 +1,4 @@
 {%  extends 'base/front_base.html' %}
-{% load my_filter %}
 
 {% block title %}
     大航海之路测试
@@ -8,7 +7,8 @@
 {% block head %}
     <link rel="stylesheet" href="{%  static 'css/home/index.min.css' %}">
     {#    <script src="{%  static 'js/index.min.js' %}"></script>#}
-    <script src="{%  static 'js/index.js' %}"></script>
+{#    <script src="{%  static 'js/index.js' %}"></script>#}
+    <script src="{%  static 'js/index.min.js' %}"> </script>
     <script src="{% static 'arttemplate/template-web.js' %}"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
@@ -67,7 +67,7 @@
     </script>
     {% endverbatim %}
 
-
+<span style="color: red"></span>
 {% endblock %}
 
 {% block main %}
