--- a/G48/front/templates/base/front_base.html
+++ b/G48/front/templates/base/front_base.html
@@ -1,5 +1,4 @@
-{#<!--  如果static没有在setting.py配置文件中配置为内置的标签，则为加入下面的一句话  -->#}
-{# {% load static %}#}
+<!--  如果static没有在setting.py配置文件中配置为内置的标签，则为加入下面的一句话  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
