将SVN提示名修正

--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -234,8 +234,8 @@
                         </div>
                         <div class="row">
                             <div class="input-group">
-                                <span class="input-group-addon" id="git-username-addon">Git用户名 *</span>
-                                <input type="text" class="form-control" placeholder="在这里填写Git用户名"
+                                <span class="input-group-addon" id="git-username-addon">SVN用户名 *</span>
+                                <input type="text" class="form-control" placeholder="在这里填写SVN用户名"
                                        aria-describedby="git-username-addon" id="git-username">
                             </div>
                         </div>
@@ -244,8 +244,8 @@
                         </div>
                         <div class="row">
                             <div class="input-group">
-                                <span class="input-group-addon" id="git-password-addon">Git密码 *</span>
-                                <input type="password" class="form-control" placeholder="在这里填写Git密码"
+                                <span class="input-group-addon" id="git-password-addon">SVN密码 *</span>
+                                <input type="password" class="form-control" placeholder="在这里填写SVN密码"
                                        aria-describedby="git-password-addon" id="git-password">
                             </div>
                         </div>
